# pronto

pronto_biped_commons/: CMakeLists.txt  package.xml
pronto_biped_commons/include/pronto_biped_commons/: forward_kinematics.hpp
pronto_biped_commons/src/: forward_kinematics.cpp
pronto_biped_core/: CMakeLists.txt  package.xml
pronto_biped_core/include/pronto_biped_core/: leg_estimate.hpp  legodo_module.hpp
pronto_biped_core/src/: FootContactAlt.cpp  foot_contact_classify.cpp  leg_estimate.cpp  legodo_module.cpp
pronto_biped_ros/: CMakeLists.txt  package.xml
pronto_biped_ros/include/pronto_biped_ros/: legodo_handler_ros.hpp  yaw_lock_handler_ros.hpp
pronto_biped_ros/src/: legodo_handler_ros.cpp  yaw_lock_handler_ros.cpp
pronto_core/: CMakeLists.txt  package.xml
pronto_core/include/pronto_core/: rbis_update_interface.hpp  zero_vel_meas_module.hpp
pronto_core/src/: ins_module.cpp  rbis.cpp  rbis_update_interface.cpp  zero_vel_meas_module.cpp
pronto_msgs/: CMakeLists.txt
pronto_msgs/msg/: BipedCartesianPoses.msg  CartesianPose.msg  FootWrenches.msg
pronto_quadruped/include/pronto_quadruped/: ImuBiasLock.hpp  StanceEstimator.hpp
pronto_quadruped/src/: ImuBiasLock.cpp  StanceEstimator.cpp
pronto_quadruped_ros/include/pronto_quadruped_ros/: stance_estimator_ros.hpp
pronto_quadruped_ros/src/: legodo_handler_ros.cpp  stance_estimator_ros.cpp
pronto_ros/: CMakeLists.txt
pronto_ros/include/pronto_ros/: pronto_node.hpp  pronto_ros_conversions.hpp  zero_vel_msg_ros_handler.hpp
pronto_ros/src/: ins_ros_handler.cpp  pronto_ros_conversions.cpp  zero_vel_msg_ros_handler.cpp
